# git-remote-gemini

./: Cargo.toml  LICENSE  README.gemini
src/: main.rs
